# mss-otg

./: README  README.md  meson.build  meson_options.txt  template.py
dir/etc/: fstab  hosts  makepkg.conf  mkinitcpio.conf  mpd.conf  named.conf  ntp.conf  pacman.conf  proxychains.conf  rndc.conf  thinkfan.conf  vconsole.conf  vimrc
dir/etc/NetworkManager/conf.d/: dns-servers.conf
dir/etc/NetworkManager/system-connections/: lo.nmconnection
dir/etc/X11/: Xwrapper.config
dir/etc/X11/xorg.conf.d/: 01-desk1.conf  01-intel-thinkpad.conf
dir/etc/acpi/: handler.sh
dir/etc/default/: grub
dir/etc/modprobe.d/: blacklist.conf
dir/etc/pulse/: daemon.conf  default.pa  system.pa
dir/etc/ssh/: banner  sshd_config
dir/etc/sudoers.d/: rsync
dir/etc/sysctl.d/: 01-ipv4.conf
dir/etc/systemd/: logind.conf
dir/etc/systemd/network/: lo.network
dir/etc/systemd/system/: dockerns.service  libvirtdns.service  nfqws.service  pulseaudio.service  shart_net.service  wg-shart_priv.service  wg-shart_pub.service
dir/etc/systemd/system/docker.service.d/: netns.conf
dir/etc/systemd/system/libvirtd.service.d/: netns.conf
dir/etc/systemd/system/named.service.d/: breakdown.conf
dir/etc/systemd/system/transmission.service.d/: username.conf
dir/etc/unbound/: crib.zone  unbound.conf
dir/etc/xdg/: picom.conf
dir/usr/share/dbus-1/system.d/: pulseaudio.conf
dir/var/named/: zone.0.0.127  zone.root-nov6
dir/var/named/zone/: 255  localhost
dir/var/named/zone/chaos/: bind  server
install/: install-desk1.txt  install-qemu.txt  install-t61.txt  install-x230.txt  packages.txt  qemu-install.txt  x230-install.txt
install/pkglist/main/: base.txt  desk1.txt  t61.txt  x230.txt
install/pkglist/user/: base.txt  desk1.txt  qemu.txt  t61.txt  x230.txt
landfill/: meson.build  meson_options.txt
landfill/config/: dwm_conf.h.in  st_conf.h.in
landfill/dmenu/: config.h.in  dmenu.c  meson.build
landfill/dwm/: config.h.in  dwm.c  dwm_conf.h.in  meson.build
landfill/st/: config.h.in  meson.build  x.c
misc/: build-quake.sh  build-reX.sh  build-udp2raw-arm64.sh  reX-build.txt
misc/old-shart_net/: shart_net.service
misc/ultimmc/: build-ultimmc.sh
nftables/: desk1.nft  lichen.nft  nightops.nft  t61.nft  x230.nft
nftables/dualvpn/: desk1.nft  t61.nft
utils/: meson.build  setboxes.sh  setboxes.sh.in
utils/etc/: funcs  meson.build  sourceme  sourceme-aliases  sourceme-build
utils/share/: bash-handler  install_symlinks.sh  install_symlinks.sh.in  meson.build  multiwg-handler  nfqws-handler  shart_net-handler
virtxml/: dom_openwrt-22.03.5.xml  dom_openwrt-23.05-rc2.xml  dom_openwrt-23.05.0.xml  dom_win10-ltsc-21h2.xml  net_cumvirt.xml  net_gat-lan.xml  net_gat-ptp.xml  net_gat.xml  pool_cumvirt.xml  pool_gat.xml  pool_iso.xml
